# bayan

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: model-tests.yml
.github/workflows/: model-tests.yml
src/al-bab/: convert_to_tflite.py  inference.py  train.py
src/al-bab/scripts/: extract_log_mel.py  vad_dataset.py
src/al-bab/tests/: test_mix_and_label.py
src/al_bab/: model.py
src/al_bab/data/: loader_utils.py  test_loader.py  training_loader.py
src/al_bab/scripts/: extract_log_mel.py  mix_and_label.py  vad_dataset.py
src/soroush/: convert_to_tflite.py  create_audio_tf_records.py  train_soroush.py
test/al-bab/: sanity_check.py
test/soroush/: soroush_test.py
tests/al-bab/: extract_log_mel_test.py  mix_and_label_test.py  sanity_check.py  vad_dataset_test.py
