[project]
name = "bayan"
version = "0.1.0"
description = "A family of voice-driven models for audio processing"
readme = "README.md"
requires-python = ">=3.10"

# Core dependencies (platform-agnostic)
dependencies = [
    "pandas==2.0.3",
    "librosa==0.11.0",
    "matplotlib==3.10.1",
    "scipy==1.15.2",
    "pytest==8.3.5",
    "webrtcvad==2.0.10",
    "python-dotenv==1.1.0",
    "kagglehub==0.3.12",
    "kaggle==1.7.4.5",
    "tensorflow==2.19.0",
    "keras==3.5.0",
    "numpy==1.26.4",
    "tensorboard==2.19.0",
    "tensorflow-addons==0.21.0",
]

[project.optional-dependencies]
# macOS Apple Silicon
macos = ["tensorflow-metal==1.2.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
